--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,700;1,400&family=Rubik:wght@300;600&family=Sansita:wght@400;700&display=swap');
+
+/*
+font-family: 'Lato', sans-serif;
+font-family: 'Rubik', sans-serif;
+font-family: 'Sansita', sans-serif; 
+color : #2B2B2B */
+
 * {
     margin: 0;
     padding: 0;
@@ -13,21 +21,44 @@ header {
     
     position: absolute;
     display: flex;
+    justify-content: space-around;
+
 
     background-color: rgba(255, 255, 255, 0.4);
 }
 
+.header-divs {
+    width: 30vw;
+    height: 100%;
 
-/*
+    font-family: 'Lato', sans-serif;
+    color: white;
+    font-size: 12px;
+   
+    display: flex;
+
+    align-items: center;
+}
+
+
+/*ajeitar dimensao imagem, não consigo*/
 #logotipo-amg-gustavo {
-    position: relative;
 
-    background size: 1 vh;
 
 }
 
-*/
+#header-menus {
+    width: 100%;    
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 
+}
+
+#header-contato {
+    padding-left: 10vh;
+    color: #FF8BAA;
+}
 
 
 
@@ -42,7 +73,7 @@ main {
 
 #princial-imagem-aurora {
     width: 100%;
-    margin-top: -70vh;
+    margin-top: -50vh;
     top: -50vh;
 }
 
@@ -55,6 +86,63 @@ main {
 
     background: linear-gradient(transparent, rgb(0 0 0) 15%);
 }
+
+
+.principal-abertura {
+    position: absolute; 
+    width: 100vw;
+    height: 90vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    font-family: 'Sansita', sans-serif; 
+}
+
+.principal-abertura h1{
+    font-size: 16vh;
+    color: white;
+
+}
+
+.princ-texto-abertura {
+    animation-name: animacao-textoprincipal;
+    animation-duration: 9s;
+}
+
+@keyframes animacao-textoprincipal {
+    0% {opacity: 0;}
+}
+
+#princ-descer {
+    margin-top: 74vh;
+    font-size: 2.5vh;
+    padding: 1vh 1vw;
+    
+    
+    color: white;
+    letter-spacing: 0.8vw;
+    font-family: 'Rubik', sans-serif;
+    color: #FF8BAA;
+    font-weight: 600;
+
+    animation: anim-scroll 3s infinite ease;
+}
+
+
+
+@keyframes anim-scroll {
+    0% {
+        margin-bottom: 10vh;
+    }
+}
+
+
+
+
+
 
 .principal-conteudo {
     width: 90vw;
