--- a/src/style.css
+++ b/src/style.css
@@ -17,14 +17,11 @@ color : #2B2B2B */
 
 header {
     width: 100vw;
-    height: 10vh;
+    height: 12vh;
     
     position: absolute;
     display: flex;
-    justify-content: space-around;
-
-
-    background-color: rgba(255, 255, 255, 0.4);
+    justify-content: space-evenly;
 }
 
 .header-divs {
@@ -38,13 +35,7 @@ header {
     display: flex;
 
     align-items: center;
-}
-
-
-/*ajeitar dimensao imagem, não consigo*/
-#logotipo-amg-gustavo {
-
-
+    justify-content: space-around;
 }
 
 #header-menus {
@@ -57,7 +48,7 @@ header {
 
 #header-contato {
     padding-left: 10vh;
-    color: #FF8BAA;
+    color: #e9e920;
 }
 
 
@@ -75,6 +66,7 @@ main {
     width: 100%;
     margin-top: -50vh;
     top: -50vh;
+    background-size: cover;
 }
 
 #prinipal-gradiente-fundo {
@@ -125,7 +117,7 @@ main {
     color: white;
     letter-spacing: 0.8vw;
     font-family: 'Rubik', sans-serif;
-    color: #FF8BAA;
+    color: #e9e920;
     font-weight: 600;
 
     animation: anim-scroll 3s infinite ease;
