--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,6 @@ color : #2B2B2B */
 }
 
 
-
 header {
     width: 100vw;
     height: 12vh;
@@ -30,7 +29,7 @@ header {
 
     font-family: 'Lato', sans-serif;
     color: white;
-    font-size: 12px;
+    font-size: 13px;
    
     display: flex;
 
@@ -43,15 +42,11 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-
 }
 
 #header-contato {
-    padding-left: 10vh;
     color: #e9e920;
 }
-
-
 
 
 main {
@@ -64,19 +59,18 @@ main {
 
 #princial-imagem-aurora {
     width: 100%;
-    margin-top: -50vh;
-    top: -50vh;
+    margin-top: -60vh;
     background-size: cover;
 }
 
 #prinipal-gradiente-fundo {
     width: 100%;
-    height: 320vh;
+    height: 250vh;
 
     position: absolute;
     top: 80vh;
 
-    background: linear-gradient(transparent, rgb(0 0 0) 15%);
+    background: linear-gradient(transparent, rgb(0 0 0) 30%);
 }
 
 
@@ -109,10 +103,9 @@ main {
 }
 
 #princ-descer {
-    margin-top: 74vh;
+    margin-top: 75vh;
     font-size: 2.5vh;
     padding: 1vh 1vw;
-    
     
     color: white;
     letter-spacing: 0.8vw;
@@ -124,7 +117,6 @@ main {
 }
 
 
-
 @keyframes anim-scroll {
     0% {
         margin-bottom: 10vh;
@@ -132,29 +124,33 @@ main {
 }
 
 
-
-
-
-
 .principal-conteudo {
     width: 90vw;
-    height: 70vh;
+    height: 80vh;
    
     position: absolute;
-    border: 2px solid red;
+    border: 2px solid white;
+    display: flex;
+}
+
+.principal-organizaocontainer {
+    display: flex;
+    justify-content: space-evenly;
+    position: absolute;
+    align-items: center;
+   
+    height: 79vh;
+    width: 40vw;
+    
+    color: white;
 }
 
 #princ-conteudo-um {
-    top: 90vh;
-
+    top: 95vh;
 }
 
 #princ-conteudo-dois {
-    top: 180vh;
-
-}
-
-#princ-conteudo-tres {
-    top: 270vh;
+    top: 195vh;
+    flex-direction: row-reverse;
 
 }
