--- a/src/style.css
+++ b/src/style.css
@@ -70,7 +70,7 @@ main {
     position: absolute;
     top: 80vh;
 
-    background: linear-gradient(transparent, rgb(0 0 0) 30%);
+    background: linear-gradient(transparent, #0e0e0e 30%);
 }
 
 
@@ -123,7 +123,6 @@ main {
     }
 }
 
-
 .principal-conteudo {
     width: 90vw;
     height: 80vh;
@@ -152,5 +151,74 @@ main {
 #princ-conteudo-dois {
     top: 195vh;
     flex-direction: row-reverse;
+}
 
+/*footer*/
+
+footer {
+    position: absolute;
+    width: 100%;
+    height: 35vh;
+    bottom: -230%;
+    right: -4px;
+   
+    letter-spacing: 1.5px;
+    color: white;
+    font-family: 'Lato', sans-serif;
+    font-size: 12px;
+}
+
+#rodape-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 55px;
+    background-color: black;
+}
+
+#rodape-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#rodape-redessociais {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 10px;
+}
+
+
+#rodape-organizacaocontainer {
+    width: 90%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+#rodape-redessociais .rodape-link i {
+    font-size: 25px;
+    color: #f5f5f5;
+}
+
+
+#rodape-redessociais .rodape-link:hover {
+    opacity: 0.5;
+}
+
+#rodape-navegacao {
+display: flex;
+flex-direction: column;
+gap: 5px;
+list-style: none;
+}
+
+.rodape-link {
+    color: #fff;
+    font-size: 12px ;
+    font-weight: 800;
 }
